--- a/vmax_src/templates/album/encore.html
+++ b/vmax_src/templates/album/encore.html
@@ -72,23 +72,21 @@
     <!-- Page Content -->
     <div class="container">
 
+
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Encore
                 </h1>
             </div>
-        </div>
+        </div>          
+                <img src="{% static 'img/albums/albums_large/encore_large.jpg' %}" alt="" class = "album-page-pic">
 
-        
-
-                <img src="{% static 'img/albums/albums_large/encore_large.jpg' %}" alt="" align="center">
-
-                <h2 align="middle">Editors' Notes</h2>
-                <p>Encore closes a six-year period in which Eminem was the most popular, powerful, and controversial rapper in the world. “Like Toy Soldiers” looks at the senselessness of Em’s feuds with Source magazine owner Benzino and Murder Inc. crew. Songs like “Rain Man,” “Just Lose It,” “My 1st Single,” and “A*s Like That” capture the irreverent insight and trademark mischief that made Slim Shady a star. As he prepares to cede the spotlight, Eminem leaves to his legion of fans two parting messages: an autobiography traced through music (“Yellow Brick Road”) and a final call to future rebellion (“Mosh”).</p>
+                <h2 align="middle" class="editor">Editors' Notes</h2>
+                <p class="albumParagraph">Encore closes a six-year period in which Eminem was the most popular, powerful, and controversial rapper in the world. “Like Toy Soldiers” looks at the senselessness of Em’s feuds with Source magazine owner Benzino and Murder Inc. crew. Songs like “Rain Man,” “Just Lose It,” “My 1st Single,” and “A*s Like That” capture the irreverent insight and trademark mischief that made Slim Shady a star. As he prepares to cede the spotlight, Eminem leaves to his legion of fans two parting messages: an autobiography traced through music (“Yellow Brick Road”) and a final call to future rebellion (“Mosh”).</p>
                 
 
-                <h3>Track listing</h3>
+                <h3 align="middle">Track listing</h3>
                 <ol>
                     <li> "Curtains Up" </li>         
                     <li> "Evil Deeds"  </li>
@@ -111,11 +109,7 @@
                     <li> "Final Thought" (skit) </li>    
                     <li> "Encore / Curtains Down" (featuring Dr. Dre & 50 Cent)</li>
                 </ol>
-
-     
-        
-
-       <hr>
+       <hr >
 
 
 
