--- a/vmax_src/templates/artist/eminem.html
+++ b/vmax_src/templates/artist/eminem.html
@@ -75,26 +75,65 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Eminem
+                <h1 class="page-header" >Eminem
                 </h1>
             </div>
         </div>
 
-        
+
+        <!-- popularity tag -->
+        <h2 style="font-size:17px;margin-top:-10px; margin-bottom: 10px">popularity:  &nbsp &nbsp 95 &nbsp / &nbsp 100 </h2>
+         <h2 style="font-size:17px;margin-top:-10px; margin-bottom: 10px">origin: &nbsp &nbsp Detroit, Michigan </h2>
+        <h2 style="font-size:17px;margin-top:-10px;margin-bottom: 10px">genre: &nbsp &nbsp Hip-Hop/Rap </h2>
 
 
-        
-        <!-- photo -->
+       
 
-       <h2>Biography: </h2>
+
+            
+        <!-- biography -->
+
+       <h2 class="page-header">Biography </h2>
+
             <p>
                 <img  src="{% static 'img/artist/eminem_page.jpg' %}" alt=""  style="float: left; margin: 0px 20px 10px 0px;"> 
 
                 To call Eminem hip-hop's Elvis is correct to a degree, but it's largely inaccurate. Certainly, Eminem was the first white rapper since the Beastie Boys to garner both sales and critical respect, but his impact exceeded this confining distinction. On sheer verbal skills, Eminem was one of the greatest MCs of his generation — rapid, fluid, dexterous, and unpredictable, as capable of pulling off long-form narrative as he was delivering a withering aside — and thanks to his mentor Dr. Dre, he had music to match: thick, muscular loops that evoked the terror and paranoia Em's music conjured. And, to be certain, a great deal of the controversy Eminem courted — and during the turn of the millennium, there was no greater pop cultural bogeyman than Marshall Mathers — came through in how his violent fantasias, often directed at his mother or his wife, intertwined with flights of absurdity that appealed to listeners too young to absorb the psychodramas Eminem explored on his hit albums, The Slim Shady LP and The Marshall Mathers LP. With hits "My Name Is" and "The Real Slim Shady," he ruled the airwaves, but it wasn’t long before some detractors acknowledged his depth, helped in part by singles like the mournful "Stan," written from the perspective of an obsessed fan. Eminem capitalized on this forward momentum by crossing over onto the big screen with 8 Mile, earning acclaim for his performance and an Oscar for the film’s anthem "Lose Yourself," but a number of demons led him to shut down for the second half of the decade, an absence that proved life is indeed empty without Em, before he returned in 2009 with Relapse.
             </p>
 
-       <hr>
 
+        <!-- youtube -->
+
+        <h2 class="page-header">Related Videos</h2>
+
+        <!-- video 1 -->
+        <iframe width="450" height="350" src="https://www.youtube.com/embed/S9bCLPwzSC0" frameborder="0" allowfullscreen></iframe>
+         &nbsp 
+        <!-- video 2 -->
+        <iframe width="450" height="350" src="https://www.youtube.com/embed/uelHwf8o7_U" frameborder="0" allowfullscreen></iframe>
+
+
+        <!-- album -->
+
+        <br>
+        <br>
+        <h2 class="page-header">TheCodas' recommended album</h2>
+        
+        <div class="recommended-album">
+            <a href="{% url 'encore' %}">
+                <img src="{% static 'img/albums/encore.jpg' %}"   height="250" width="250" >  
+                Encore
+            </a>
+        </div>
+
+
+        <!-- spotify  link -->
+        <h2 class="page-header">Follow on Spotify</h2>
+
+        <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:artist:7dGJo4pcD2V6oG8kP0tJRR&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true">
+        </iframe> 
+        <br>
+        <hr>
 
 
 
