--- a/vmax_src/templates/dynamic_album.html
+++ b/vmax_src/templates/dynamic_album.html
@@ -8,29 +8,37 @@
 {% endblock %}
 {% block content %}
 
-    <!-- Page Content -->
+      <!-- Page Content -->
     <div class="container">
 
 
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">{{Album.album_name}}
+                <h1 class="page-header">{{album_name}}
                 </h1>
             </div>
         </div>          
-                <img src="{% static {{Album.image_url}} %}" alt="" class = "album-page-pic">
 
+        <h2 style="font-size:17px;margin-top:-10px; margin-bottom: 10px">released date:  &nbsp &nbsp 95 &nbsp / &nbsp {{release_date}} </h2>
+        <h2 style="font-size:17px;margin-top:-10px;margin-bottom: 10px">genre: &nbsp &nbsp {{genre}} </h2>
+
+
+
+                <img src="{spotify_albums_uri}" alt="" class = "album-page-pic">
+
+                <!-- editor notes section -->
                 <h2 align="middle" class="editor">Editors' Notes</h2>
-                <p class="albumParagraph">{{Album.editors_notes}}</p>
+                <p class="albumParagraph">{{editors_notes}}</p>
                 
 
+                <!-- Spotify tracks player -->
                 <h3 align="middle">Track listing</h3>
-                <ol>
-                    {{Album.spotify_albums_uri}}
-                </ol>
-       <hr >
 
+                <iframe src="https://embed.spotify.com/?uri=spotify:album:{{spotify_albums_uri}}" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+
+       <hr>
+       
 {% endblock %}
 {% block footer %}
   {{block.super}}
