--- a/vmax_src/templates/dynamic_album.html
+++ b/vmax_src/templates/dynamic_album.html
@@ -25,7 +25,7 @@
 
 
 
-                <img src="{spotify_albums_uri}" alt="" class = "album-page-pic">
+                <img src="{{spotify_albums_uri}}" alt="" class = "album-page-pic">
 
                 <!-- editor notes section -->
                 <h2 align="middle" class="editor">Editors' Notes</h2>
@@ -38,7 +38,7 @@
                 <iframe src="https://embed.spotify.com/?uri=spotify:album:{{spotify_albums_uri}}" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 
        <hr>
-       
+
 {% endblock %}
 {% block footer %}
   {{block.super}}
