--- a/vmax_src/templates/dynamic_artist.html
+++ b/vmax_src/templates/dynamic_artist.html
@@ -20,18 +20,14 @@
         </div>
 
 
-        <!-- popularity tag -->
+        <!-- artist additional information -->
         <h2 style="font-size:17px;margin-top:-10px; margin-bottom: 10px">popularity:  &nbsp &nbsp {{Artist.popularity}} &nbsp / &nbsp 100 </h2>
          <h2 style="font-size:17px;margin-top:-10px; margin-bottom: 10px">origin: &nbsp &nbsp {{Artist.origin}} </h2>
         <h2 style="font-size:17px;margin-top:-10px;margin-bottom: 10px">genre: &nbsp &nbsp {{Artist.origin}} </h2>
 
-
-       
-
-
+     
             
         <!-- biography -->
-
        <h2 class="page-header">Biography </h2>
 
             <p>
@@ -40,9 +36,7 @@
 
 
         <!-- youtube -->
-
         <h2 class="page-header">Related Videos</h2>
-
         <!-- video 1 -->
         <iframe width="450" height="350" src={{Artist.youtubeurl_1}} frameborder="0" allowfullscreen></iframe>
          &nbsp 
@@ -51,7 +45,6 @@
 
 
         <!-- album -->
-
         <br>
         <br>
         <h2 class="page-header">TheCodas' recommended album</h2>
@@ -70,6 +63,7 @@
         <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:artist:{{Artist.spotify_artist_uri}}&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true">
         </iframe> 
         <br>
+        <!-- closing line -->
         <hr>
 
 {% endblock %}
