making changes to view.py

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -40,7 +40,7 @@
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/raymond.jpg' %}" alt="" height="200" width="200">
                 <h4>Raymond Ton</h4>
-                <h6>Back-End Development</h6>
+                <h6>Back-End Development / Quality Assurance</h6>
                 <h6>Number of Commits: 7</h6>
                 <h6>Number of Issues: 5</h6>
                 <h6>Number of Unit Tests: 6</h6>
