created database.html & modified associated html

--- a/vmax_src/templates/navbar.html
+++ b/vmax_src/templates/navbar.html
@@ -58,6 +58,9 @@
                     <li>
                         <a  href="../albums">Albums</a>
                     </li>
+                    <li>
+                        <a  href="../database">Database</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
