--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -32,8 +32,8 @@
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/efe.jpg' %}" alt="" height="200" width="200">
                 <h4>Efosa "Efe" Elaiho</h4>
                 <h6>Full-Stack Development & UX/UI</h6>
-                <h6>Number of Commits: 38</h6>
-                <h6>Number of Issues: 12</h6>
+                <h6>Number of Commits: 57</h6>
+                <h6>Number of Issues: 23</h6>
                 <h6>Number of Unit Tests: 0</h6>
                 <p>A computer science major from Dallas,TX. Loves sushi rolls. Firmly believes Dez Bryant caught the ball!</p>
             </div>
@@ -41,18 +41,18 @@
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/raymond.jpg' %}" alt="" height="200" width="200">
                 <h4>Raymond Ton</h4>
                 <h6>Back-End Development / Quality Assurance</h6>
-                <h6>Number of Commits: 7</h6>
-                <h6>Number of Issues: 5</h6>
-                <h6>Number of Unit Tests: 6</h6>
-                <p>Student seeking a bachelor's degree in computer science. Interests include online gaming, music, basketball.</p>
+                <h6>Number of Commits: 23</h6>
+                <h6>Number of Issues: 8</h6>
+                <h6>Number of Unit Tests: 22</h6>
+                <p>Student seeking a bachelor's degree in computer science. Interests include online gaming, music, and basketball.</p>
             </div>
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/justin.jpg' %}" alt="" height="200" width="200">
                 <h4>Justin Winata</h4>
                 <h6> API / Back-End Development </h6>
-                <h6>Number of Commits: 29</h6>
+                <h6>Number of Commits: 38</h6>
                 <h6>Number of Issues: 6</h6>
-                <h6>Number of Unit Tests: </h6>
+                <h6>Number of Unit Tests: 0</h6>
                 <p>Originally from Sugar Land, TX and now currently a student at UT Austin, a part-time Software Contractor at Tempo Semiconductor, Inc., and team member trainee for Koinonia Austin trying to balance work, school, and ministry.</p>
             </div>
         </div>
@@ -71,8 +71,8 @@
                 <img class="img-circle img-responsive img-center aboutpic" src="{% static 'img/mark.jpg' %}" alt="" height="200" width="200">
                 <h4>Mark Laver</h4>
                 <h6> API / Back-End Development/ Server </h6>
-                <h6>Number of Commits: 31</h6>
-                <h6>Number of Issues: 5</h6>
+                <h6>Number of Commits: 51</h6>
+                <h6>Number of Issues: 9</h6>
                 <h6>Number of Unit Tests: 0</h6>
                 <p>Mark is a former Marine pursuing a bachelor's degree in computer science. Interests include scuba and history.</p>
 
