--- a/vmax_src/templates/database.html
+++ b/vmax_src/templates/database.html
@@ -1,10 +1,20 @@
 {% extends "navbar.html" %}
+
+<!--head tag-->
 {% block head %}
   {{block.super}}
+
+
+
+
 {% endblock %}
+
+<!-- navigation -->
 {% block navbar %}
   {{block.super}}
 {% endblock %}
+
+<!--body-->
 {% block content %}
 {% load staticfiles %}
 
@@ -14,19 +24,19 @@
         <table data-url="data1.json" data-height="299" data-sort-name="name" data-sort-order="desc">
             <thead>
                 <tr>
-                    <th data-field="id" data-align="right" data-sortable="true">Item ID</th>
-                    <th data-field="name" data-align="center" data-sortable="true">Item Name</th>
-                    <th data-field="price" data-sortable="true">Item Price</th>
+                    <th data-field="id" data-align="center" data-sortable="true">Name</th>
+                    <th data-field="name" data-align="center" data-sortable="true">Origin</th>
+                    <th data-field="price" data-align="center" data-sortable="true">Popularity</th>
+                    <th data-field="price" data-align="center" data-sortable="true">Genre</th>
                 </tr>
+
             </thead>
         </table>
                 
 
-        
-
-
-
 {% endblock %}
+
+
 {% block footer %}
   {{block.super}}
 {% endblock %}
