add red outline on profile pic

--- a/vmax_src/static/vmax_static/css/grayscale.css
+++ b/vmax_src/static/vmax_static/css/grayscale.css
@@ -429,5 +429,10 @@ body {
 }
 
 hr{
-    border-color:#d50000"
+    border-color:#d50000;
+}
+
+.bigprofilepic{
+    border-radius: 15px;
+    border: 1.5px solid #D50000;
 }
