fixed releas date

--- a/vmax_src/templates/dynamic_album.html
+++ b/vmax_src/templates/dynamic_album.html
@@ -21,8 +21,8 @@
         </div>          
 
         <!-- Subtitles with album additional information -->
-        <h2 style="font-size:17px;margin-top:-10px; margin-bottom: 10px">released date:  &nbsp &nbsp 95 &nbsp / &nbsp {{album.release_date}} </h2>
-        <h2 style="font-size:17px;margin-top:-10px;margin-bottom: 10px">genre: &nbsp &nbsp {{album.genre}} </h2>
+        <h2 style="font-size:17px;margin-top:-10px; margin-bottom: 10px">released date:&nbsp {{album.release_date}} </h2>
+        <h2 style="font-size:17px;margin-top:-10px;margin-bottom: 10px">genre:&nbsp {{album.genre}} </h2>
 
 
         <!-- album image -->
