--- a/vmax_src/static/vmax_static/css/grayscale.css
+++ b/vmax_src/static/vmax_static/css/grayscale.css
@@ -397,6 +397,8 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 400px;
+    height: auto;
 }
 
 .recommended-album img{
