--- a/vmax_src/static/vmax_static/css/grayscale.css
+++ b/vmax_src/static/vmax_static/css/grayscale.css
@@ -399,6 +399,10 @@ body {
     margin-right: auto;
     width: 400px;
     height: auto;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: #D50000;
+
 }
 
 .recommended-album img{
