add border-width to album pic

--- a/vmax_src/static/vmax_static/css/grayscale.css
+++ b/vmax_src/static/vmax_static/css/grayscale.css
@@ -400,6 +400,7 @@ body {
     width: 400px;
     height: auto;
     border-radius: 5px;
+    border-width: 1.5px;
     border-style: solid;
     border-color: #D50000;
 
