--- a/vmax_src/static/vmax_static/css/grayscale.css
+++ b/vmax_src/static/vmax_static/css/grayscale.css
@@ -85,7 +85,9 @@ a:focus {
 .navbar-custom .navbar-brand {
     font-weight: 700;
 }
-
+.nav {
+    font-weight: 700;
+}
 .navbar-custom .navbar-brand:focus {
     outline: 0;
 }
