add database to home nav bar

--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -68,6 +68,9 @@
                     <li>
                         <a  href="{% url 'albums' %}">Albums</a>
                     </li>
+                    <li>
+                        <a  href="{% url 'database' %}">Database</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
