added new page to navbar

--- a/vmax_src/templates/navbar.html
+++ b/vmax_src/templates/navbar.html
@@ -59,7 +59,10 @@
                         <a  href="../albums">Albums</a>
                     </li>
                     <li>
-                        <a  href="../database">Database</a>
+                        <a  href="../database"> Artist Database</a>
+                    </li>
+                    <li>
+                        <a  href="../database"> Album Database</a>
                     </li>
                 </ul>
             </div>
