--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -69,7 +69,10 @@
                         <a  href="{% url 'albums' %}">Albums</a>
                     </li>
                     <li>
-                        <a  href="{% url 'database' %}">Database</a>
+                        <a  href="{% url 'database' %}"> Artist Database</a>
+                    </li>
+                    <li>
+                        <a  href="../database"> Album Database</a>
                     </li>
                 </ul>
             </div>
