changed about section

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -31,7 +31,7 @@
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/efe.jpg' %}" alt="" height="200" width="200">
                 <h4>Efosa "Efe" Elaiho</h4>
-                <h6>Full-Stack Development & UX/UI</h6>
+                <h6>Front-End/Back-End Development & UX/UI</h6>
                 <h6>Number of Commits: 57</h6>
                 <h6>Number of Issues: 23</h6>
                 <h6>Number of Unit Tests: 0</h6>
@@ -40,7 +40,7 @@
             <div class="col-lg-4 col-sm-4 text-center">
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/raymond.jpg' %}" alt="" height="200" width="200">
                 <h4>Raymond Ton</h4>
-                <h6>Back-End Development / Quality Assurance</h6>
+                <h6>Back-End Development</h6>
                 <h6>Number of Commits: 23</h6>
                 <h6>Number of Issues: 8</h6>
                 <h6>Number of Unit Tests: 22</h6>
