edit urls and views to incorporate databases

--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -69,11 +69,12 @@
                         <a  href="{% url 'albums' %}">Albums</a>
                     </li>
                     <li>
-                        <a  href="{% url 'database' %}"> Artist Database</a>
+                        <a  href="{% url 'artistdatabase' %}"> Artist Database</a>
                     </li>
                     <li>
-                        <a  href="../database"> Album Database</a>
+                        <a  href="{% url 'albumdatabase' %}"> Album Database</a>
                     </li>
+                
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
