--- a/vmax_src/templates/navbar.html
+++ b/vmax_src/templates/navbar.html
@@ -59,10 +59,10 @@
                         <a  href="../albums">Albums</a>
                     </li>
                     <li>
-                        <a  href="../database"> Artist Database</a>
+                        <a  href="../artistdatabase"> Artist Database</a>
                     </li>
                     <li>
-                        <a  href="../database"> Album Database</a>
+                        <a  href="../albumdatabase"> Album Database</a>
                     </li>
                 </ul>
             </div>
