change paths for database

--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -69,10 +69,10 @@
                         <a  href="{% url 'albums' %}">Albums</a>
                     </li>
                     <li>
-                        <a  href="{% url 'artistdatabase' %}"> Artist Database</a>
+                        <a  href="../artistdatabase"> Artist Database</a>
                     </li>
                     <li>
-                        <a  href="{% url 'albumdatabase' %}"> Album Database</a>
+                        <a  href="../albumdatabase"> Album Database</a>
                     </li>
                 
                 </ul>
