add database tables, and titles for webpages

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -1,6 +1,7 @@
 {% extends "navbar.html" %}
 {% block head %}
     {% load staticfiles %}
+    <title>Volume.max() - About</title>
     <!-- Custom CSS -->
     <link href="{% static 'css/round-about.css' %}" rel="stylesheet">
 
