--- a/vmax_src/templates/albums.html
+++ b/vmax_src/templates/albums.html
@@ -1,5 +1,6 @@
 {% extends "navbar.html" %}
 {% block head %}
+<title>Volume.max() - Albums</title>
   {{block.super}}
 {% endblock %}
 {% block navbar %}
