--- a/vmax_src/templates/artists.html
+++ b/vmax_src/templates/artists.html
@@ -1,6 +1,8 @@
 {% extends "navbar.html" %}
 {% block head %}
+ <title>Volume.max() - Artists</title>
   {{block.super}}
+
 {% endblock %}
 {% block navbar %}
   {{block.super}}
