--- a/vmax_src/templates/dynamic_artist.html
+++ b/vmax_src/templates/dynamic_artist.html
@@ -36,7 +36,7 @@
 
 
         <!-- youtube -->
-        <h2 class="page-header">Related Videos</h2>
+        <h2 class="page-header">Related Videos  <i class="fa fa-youtube-play "></i></h2>
         <!-- video 1 -->
         <iframe width="450" height="350" src="{{artist.youtube_url_1}}" frameborder="0" allowfullscreen></iframe>
          &nbsp 
@@ -58,7 +58,7 @@
 
 
         <!-- spotify  link -->
-        <h2 class="page-header">Follow on Spotify</h2>
+        <h2 class="page-header">Follow on Spotify <i class="fa fa-spotify "></i></h2>
 
         <iframe src="https://embed.spotify.com/follow/1/?uri={{artist.spotify_artist_uri}}&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true">
         </iframe> 
