--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -20,6 +20,7 @@
     <link href="{% static 'css/grayscale.css' %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
+    <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Jura' rel='stylesheet' type='text/css'>
 
   
